--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           IMAGE_NAME: my-image
         run: |
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v2 .
+          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v2
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
 
   test:
