--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: my-image
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v2 .
-          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v2
+          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME: .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:latest
 
   test:
