--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,8 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: my-image
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
+          #docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
+          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v1.0 .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v1.0
 
   test:
