--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,24 +20,25 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: my-image
         run: |
-          #docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v1.0 .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v1.0
 
-  test:
+  deploy:
     runs-on: ubuntu-latest
+    needs: build  # Ensure 'build' job completes before deploying
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v1
+      - name: Install SSH key
+        uses: webfactory/ssh-agent@v0.5.4
         with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
-          pip install pytest
-          pytest test.py
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: SSH into EC2 instance
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            # Commands to pull Docker image and run it on EC2 instance
+            docker pull $DOCKERHUB_USERNAME/my-image:v1.0
+            docker run -d -p 80:80 $DOCKERHUB_USERNAME/my-image:v1.0  # Example command, adjust ports as needed
