--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            # Commands to pull Docker image and run it on EC2 instance
-            docker pull $DOCKERHUB_USERNAME/my-image:v1.0
-            docker run -d -p 80:8080 $DOCKERHUB_USERNAME/my-image:v1.0  # Example command, adjust ports as needed
+            # Commands to pull Docker image and run it on EC2 instance   
+            sudo docker pull $DOCKERHUB_USERNAME/my-image:v1.0
+            sudo docker run -d -p 80:8080 $DOCKERHUB_USERNAME/my-image:v1.0  # Example command, adjust ports as needed
