--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,14 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Login to DockerHub and build/push Docker image
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build, tag, and push image to DockerHub
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -23,22 +26,12 @@ jobs:
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0 .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build  # Ensure 'build' job completes before deploying
-    steps:
-      - name: Install SSH key
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: SSH into EC2 instance
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          run: | 
-            # Commands to pull Docker image and run it on EC2 instance   
-            sudo docker run -d -p 80:8080 pradeepraghav20/my-image:v1.0
-            
+      # Deploy to EC2 instance
+      - name: Deploy to EC2
+        env:
+          EC2_HOST: your-ec2-public-ip
+          EC2_USERNAME: ec2-user
+          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          IMAGE_NAME: my-image
+        run: |
+          ssh -i $SSH_PRIVATE_KEY $EC2_USERNAME@$EC2_HOST "docker pull $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0 && docker stop my-container && docker rm my-container && docker run -d --name my-container -p 80:80 $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0"
