--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,34 @@
-name: CI/CD Pipeline
+name: Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [ dev ]
 
 jobs:
-  build:
+  Deploy:
+    name: Deploy to EC2
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Login to DockerHub and build/push Docker image
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build, tag, and push image to DockerHub
+      - uses: actions/checkout@v2 
+      - name: Build & Deploy
         env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          IMAGE_NAME: my-image
+            PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            HOSTNAME: ${{secrets.EC2_HOST}}
+            USER_NAME: ${{secrets.EC2_USERNAME}}
+      
         run: |
-          docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0 .
-          docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
-      # Deploy to EC2 instance
-      - name: Deploy to EC2
-        env:
-          EC2_HOST: ${{secrets.EC2_HOST}}
-          EC2_USERNAME:  ${{ secrets.EC2_USERNAME}}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY}}
-          IMAGE_NAME: my-image
-        run: |
-          ssh -i $SSH_PRIVATE_KEY $EC2_USERNAME@$EC2_HOST "docker pull $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0 && docker stop my-container && docker rm my-container && docker run -d --name my-container -p 80:80 $DOCKERHUB_USERNAME/$IMAGE_NAME:v2.0"
+              # Now we have got the access of EC2 and we will start the deploy .
+              cd /home/ubuntu/<PROJECT_DIRECTORY> &&
+              git checkout dev &&
+              git fetch --all &&
+              git reset --hard origin/dev &&
+              git pull origin dev &&
+              sudo npm i &&
+              sudo npm run build &&
+              sudo pm2 stop ./dist/index.js &&
+              sudo pm2 start ./dist/index.js
+              '
